Clean out package.json a little

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "trainer-zone",
+  "name": "lol-addict",
   "version": "0.0.0",
   "private": true,
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "migrate": "db-migrate up",
-    "watch": "yarn watch:server & yarn watch:bundle & yarn watch:sass",
-    "productionify": "yarn prod:bundle && yarn prod:sass",
+    "watch": "npm run watch:server & npm run watch:bundle & npm run watch:sass",
+    "productionify": "npm run prod:bundle && npm run prod:sass",
     "watch:server": "nodemon --config nodemon.server.json --exec node server.js",
     "watch:bundle": "watchify src/js/bundles/app_bundle.js -v -t babelify -g envify -p livereactload -o public/app.js",
     "watch:sass": "nodemon --exec node-sass src/css/app.sass public/app.css --config nodemon.sass.json",
@@ -19,13 +19,11 @@
     "babel-plugin-external-helpers": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-latest": "^6.16.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.22.0",
     "babelify": "^7.3.0",
-    "bcrypt": "^1.0.2",
-    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "bootstrap-sass": "^3.3.7",
@@ -47,13 +45,9 @@
     "express-validator": "^2.18.0",
     "form-data": "^0.2.0",
     "hash-int": "^1.0.0",
-    "html-pdf": "^2.1.0",
-    "html-to-react": "^1.2.2",
-    "i18n": "^0.8.3",
     "immutable": "^3.8.1",
     "jsonwebtoken": "^5.4.1",
     "lodash": "^4.17.4",
-    "messageformat": "^1.0.2",
     "method-override": "^2.3.7",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
@@ -62,7 +56,7 @@
     "passport-local": "^1.0.0",
     "pg": "^6.1.2",
     "pug": "^2.0.0-beta6",
-    "react": "^15.4.2",
+    "react": "^15.6.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-intl": "^2.2.2",
@@ -78,16 +72,12 @@
     "rollup": "^0.40.2",
     "rollup-plugin-babel": "^2.7.1",
     "serve-favicon": "~2.3.0",
-    "sha1": "^1.1.1",
     "squel": "^5.5.1",
     "superagent": "^3.3.2",
-    "uglifyify": "^3.0.4",
-    "yarn": "^0.18.1"
+    "uglifyify": "^3.0.4"
   },
   "devDependencies": {
     "babel-plugin-react-transform": "^2.0.2",
-    "eslint": "^3.12.2",
-    "eslint-plugin-react": "^6.9.0",
     "livereactload": "^3.2.0",
     "nodemon": "^1.11.0",
     "react-proxy": "^1.1.8",
