Everything up and running on frontend

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "productionify": "npm run prod:bundle && npm run prod:sass",
     "watch:server": "nodemon --config nodemon.server.json --exec node server.js",
     "watch:bundle": "watchify src/js/bundles/app_bundle.js -v -t babelify -g envify -p livereactload -o public/app.js",
-    "watch:sass": "nodemon --exec node-sass src/css/app.sass public/app.css --config nodemon.sass.json",
+    "watch:sass": "nodemon --config nodemon.sass.json --exec node-sass src/css/app.scss public/app.css ",
     "prod:bundle": "NODE_ENV=production browserify src/js/bundles/app_bundle.js -t babelify -g envify -g uglifyify > public/app.js",
     "prod:sass": "NODE_ENV=production node-sass src/css/app.sass public/app.css --output-style=compressed"
   },
@@ -30,8 +30,6 @@
     "browserify": "^13.3.0",
     "busboy": "^0.2.12",
     "classnames": "^2.2.5",
-    "connect-flash": "^0.1.1",
-    "connect-redis": "^3.2.0",
     "connect-roles": "^3.1.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
@@ -41,7 +39,6 @@
     "dotenv": "^2.0.0",
     "envify": "^4.0.0",
     "express": "^4.14.0",
-    "express-session": "^1.14.2",
     "express-validator": "^2.18.0",
     "form-data": "^0.2.0",
     "hash-int": "^1.0.0",
