--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^5.4.1",
     "lodash": "^4.17.4",
     "method-override": "^2.3.7",
+    "mongoose": "^4.12.1",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "node-sass": "^4.3.0",
